--- a/FlightBook/templates/FlightBook/index.html
+++ b/FlightBook/templates/FlightBook/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+{% load static  %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,8 +8,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/in.css' %}">
+
 </head>
 <body>
-
+<h1>Hello world!</h1>
 </body>
 </html>
