--- a/FlightBook/templates/FlightBook/layout.html
+++ b/FlightBook/templates/FlightBook/layout.html
@@ -22,7 +22,7 @@
   {% endblock %}
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="{% url 'home' %}">
+      <a class="navbar-brand" href="{% url 'index' %}">
           <img src="{% static 'img/icon_logo.png' %}" height="34" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item {% if not page %}active{% endif %}">
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
+            <a class="nav-link" href="{% url 'index' %}">Home</a>
           </li>
           <li class="nav-item {% if page == 'bookings' %}active{% endif %}">
             <a class="nav-link" href="">My Bookings</a>
